@@ -1,0 +1,9 @@
+Title: Fix sending notification to global fallback email address
+Level: 2
+Component: notifications
+Compatible: compat
+Version: 1.4.0i4
+Date: 1482156687
+Class: fix
+
+
